--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "req-cwd": "^2.0.0",
     "request": "^2.88.0",
     "request-promise-native": "^1.0.5",
+    "scenario-eth-gas-table": "^1.0.0",
     "sha1": "^1.1.1",
     "solidity-parser-antlr": "0.4.7",
     "sync-request": "^6.0.0"
