--- a/.gitignore
+++ b/.gitignore
@@ -60,6 +60,9 @@ typings/
 # dotenv environment variables file
 .env
 
+# node modules
+node_modules
+
 # Mock debris
 mock/cache/
 mock/artifacts/
@@ -70,16 +73,7 @@ mock/cc.md
 mock/node_modules
 mock/package-lock.json
 mock/build
+mock/scenario-gas-reports
 
-usage_scenario_mock/cache/
-usage_scenario_mock/artifacts/
-usage_scenario_mock/yarn.lock
-usage_scenario_mock/codechecks.js
-usage_scenario_mock/codechecksReport.json
-usage_scenario_mock/cc.md
-usage_scenario_mock/node_modules
-usage_scenario_mock/package-lock.json
-usage_scenario_mock/build
-usage_scenario_mock/scenario-gas-reporter-reports/
 .idea
 /bin/
